src/objects/SLCA2__CA_CalendarByUser__c.object
<CustomObject>
    <description>connecting Calendar with User</description>
    <fields>
        <fullName>SLCA2__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLCA2__calendarId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>calendarId</label>
        <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
        <relationshipLabel>CA_CalendarByUsers</relationshipLabel>
        <relationshipName>CA_CalendarByUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLCA2__userId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>userId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CA_CalendarByUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CA_CalendarByUser</label>
    <listViews>
        <fullName>SLCA2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CA_CalendarByUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_CalendarByUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>